# x-poster

./: .coverage.Melissas-MacBook-Pro-2.local.31129.XxrxQtox  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODEBASE_SUMMARY.txt  PARALLEL_DEVELOPMENT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  cli.py  env.example  fix_database_types.sql  pyproject.toml  test_components.py
examples/: inspect_retrieval.py  inspect_websearch.py
src/: __init__.py
src/core/: README.md  __init__.py  config.py  models.py
src/db/: README.md  __init__.py  client.py  operations.py
src/db/migrations/: 001_initial_schema.sql  002_fix_fts_function.sql
src/generation/: README.md  __init__.py  embeddings.py  evidence.py  factcheck.py  gap_analysis.py  writer.py
src/ingestion/: README.md  __init__.py  chunker.py  ocr.py  pdf_processor.py
src/orchestrator/: README.md  __init__.py  agent.py  pipeline.py  state.py  tools.py
src/retrieval/: CONTENT_FILTER_README.md  README.md  __init__.py  content_filter.py  merger.py  reranker.py  web_search.py
src/utils/: README.md  __init__.py  cache.py  text.py
supabase/: config.toml
supabase/migrations/: 20251019203208_initial_schema.sql
tests/: __init__.py  test_models.py  test_pipeline.py
tests/fixtures/: create_test_pdfs.py
tests/generation/: test_embeddings.py  test_gap_analysis.py
tests/ingestion/: test_chunker.py  test_ocr.py  test_pdf_processor.py
tests/retrieval/: test_content_filter.py
