[project]
name = "agent-tweeter"
version = "0.1.0"
description = "AI-powered evidence-based tweet generation with inline citations"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Agent Tweeter Team"}
]
dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Database & Vector
    "supabase>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.0",
    # LLM & Embeddings
    "openai>=1.12.0",
    "sentence-transformers>=2.3.0",
    "FlagEmbedding>=1.2.0", # BGE-M3 and reranker
    # Web Search & Scraping
    "exa-py>=1.0.0",
    "google-search-results>=2.4.2", # Serper
    "firecrawl-py>=0.0.10",
    "httpx>=0.26.0",
    "trafilatura>=1.6.0",
    # PDF & OCR
    "pymupdf>=1.23.0",
    "ocrmypdf>=15.0.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    # Text Processing
    "tiktoken>=0.5.0",
    "spacy>=3.7.0",
    "scikit-learn>=1.3.0", # For cosine similarity
    # Utilities
    "redis>=5.0.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",
    "python-dateutil>=2.8.2",
    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",
    "langgraph>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "orchestra-code>=0.1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "ipython>=8.0.0",
]

[project.scripts]
agent-tweeter = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "reportlab>=4.4.4",
]

